--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -1,3 +1,11 @@
+.card-item {
+  transition: transform 0.5s;
+}
+
+.card-item:hover {
+  transform: scale(1.1);
+}
+
 .icon-xl {
   width: 2rem;
   height: 1rem;
