--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,11 @@
 *{
   margin: 0;
   scroll-behavior: smooth;
+  font-family: 'Josefin Sans', sans-serif;
 }
 .App {
   text-align: center;
-  font-family: "monospace",
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 .App-logo {
